auxi/css/template.css
/* ... */
#footer-shadow {
	height: 125px;
	position: relative;
}

#logo-space {
	text-align: center;
	position: relative;
}

#logo-space img,
#logo-space span {
	margin: 0 auto;
	width: 265px;
}

#logo-space span {
	top: 0;
	display: block;
	margin: -22px auto 0;
	font-size: 95%;
}

#logo {
	width: 265px;
	height: 83px;
}

#inset {
	height: 15px;
	padding-top: 20px;
}

/* column shadows */
#top-shadow .shadow-1,
#top-shadow .shadow-2,
#top-shadow .shadow-3 {
	top: 122px;
}

#top-shadow .shadow-1 {
	left: 0;
	margin-left: 25px;
}

#top-shadow .shadow-2 {
	right: 0;
	margin-right: 25px;
}

#top-shadow .shadow-3 {
	left: 159px;
}

.shadow-1 {
	position: absolute;
	top: 0;
	left: 0;
	height: 57px;
	width: 134px;
	background: url(../images/column-shadow-left.png) 0 0 no-repeat;
}

.shadow-2 {
	position: absolute;
	top: 0;
	right: 0;
	height: 57px;
	width: 134px;
	background: url(../images/column-shadow-right.png) 100% 0 no-repeat;
}

.shadow-3 {
	position: absolute;
	top: 0;
	left: 134px;
	height: 57px;
	background: url(../images/column-shadow-middle.png) 0 0 repeat-x;

}


#topmodules,
#bottommodules,
#footermodules,
#component {
	overflow: hidden;
}

#component .padding {
	padding: 5px 6px 0 6px;
}

.spacer .block {
	float: left;
}

.spacer .w99 .block {
	width: 99%;
}

.spacer.w49 .block {
	width: 49%;
}

.spacer.w33 .block {
	width: 33%;
}

div#bottom {
	padding-bottom: 30px;
	overflow: auto;
}

#pathway {
	height: 30px;
	padding: 0 32px;
	overflow: hidden;
}

#footermods {
	float: right;

}

/* @end */

/* @group Modules */

.moduletable,
.moduletable-hilite1,
.moduletable-hilite2,
.moduletable-hilite3,
.moduletable-hilite4,
.moduletable-hilite5,
.moduletable-hilite6,
.module,
.module-hilite1,
.module-hilite2,
.module-hilite3,
.module-hilite4,
.module-hilite5,
.module-hilite6 {
	margin: 0 0 20px 0;
}

.moduletable h3,
.module h3 {
	font-size: 125%;
	font-weight: normal;
	margin: 5px 0 10px 0;
	padding: 4px;
	font-family: Century Gothic, Arial, sans-serif;
	background: #191919;
}

.moduletable-hilite1,
.moduletable-hilite2,
.moduletable-hilite3,
.module-hilite1,
.module-hilite2,
.module-hilite3 {
	background: #0C0C0C;
	border: 1px solid #1F1F1F;
	padding: 10px;
}

.moduletable-hilite4,
.moduletable-hilite5,
.moduletable-hilite6,
.module-hilite4,
.module-hilite5,
.module-hilite6 {
	border: 1px solid #1F1F1F;
	padding: 5px;
}

.moduletable-hilite1 h3,
.moduletable-hilite2 h3,
.moduletable-hilite3 h3,
.moduletable-hilite4 h3,
.moduletable-hilite5 h3,
.moduletable-hilite6 h3,
.module-hilite1 h3,
.module-hilite2 h3,
.module-hilite3 h3,
.module-hilite4 h3,
.module-hilite5 h3,
.module-hilite6 h3 {
	font-size: 125%;
	font-weight: normal;
	margin: 0px 0 10px 0;
	font-family: Century Gothic, Arial, sans-serif;
}

.spacer div.moduletable,
.spacer div.moduletable-hilite1,
.spacer div.moduletable-hilite2,
.spacer div.moduletable-hilite3,
.spacer div.moduletable-hilite4,
.spacer div.moduletable-hilite5,
.spacer div.moduletable-hilite6,
.spacer div.module,
.spacer div.module-hilite1,
.spacer div.module-hilite2,
.spacer div.module-hilite3,
.spacer div.module-hilite4,
.spacer div.module-hilite5,
.spacer div.module-hilite6 {
	margin-left: 10px;
}

#mod-top {
	position: absolute;
	right: 25px;
	top: 0;
	width: 200px;
	height: 90px;
}

#mod-search {
	position: absolute;
	left: 45px;
	top: 20px;
	width: 115px;
}

#mod-search input {
	background: url(../images/header-bg.png);
	border: 1px solid #444;
	padding: 1px 4px;
	overflow: hidden;
	width: 110px;
	color: #999;
}

/* @end */

/* @group Horizontal Menu */

#horiz-menu {
	height: 39px;
	background: url(../images/menu-bg.png) 0 0 repeat-x;
}

#trans-menu {
	height: 45px;
	background: url(../images/header-menu.png) 0 0 repeat-x;
}

#horiz-menu ul.menu {
	padding-left: 15px;
}

#trans-menu ul.menu {
	padding-left: 15px;
}

#horiz-menu ul {
	list-style: none;
	margin: 0;
	padding: 0 0 0 0px;
}

#trans-menu ul {
	list-style: none;
	margin: 0;
	padding: 0 0 0 0px;
}

#horiz-menu li {
	display: block;
	float: left;
	margin: 0;
	padding: 0;
}

#trans-menu li {
	display: block;
	float: left;
	margin: 0;
	padding: 0;
}

#horiz-menu a {
	white-space: nowrap;
	font-family: Century Gothic, Helvetica, sans-serif;
	display: block;
	float: left;
	height: 39px;
	line-height: 42px;
	padding: 0 15px 0 15px;
	font-weight: normal;
	font-size: 110%;
	color: #ddd;
}

#trans-menu li a {
	white-space: nowrap;
	font-family: Century Gothic, Helvetica, sans-serif;
	display: block;
	float: left;
	padding: 5px 0 0 15px;
	vertical-align: middle;
	font-weight: normal;
	font-size: 90%;
	color: #ddd;
}


#horiz-menu li:hover a,
#horiz-menu li.sfHover a,
#horiz-menu li:hover a:hover,
#horiz-menu li.sfHover a:hover {
	color: #fff;
}

#horiz-menu ul ul {
	background: #151515;
	border-left: 1px solid #333333;
	border-right: 1px solid #000;
}

#horiz-menu li li {
	background: none;
	border-top: 1px solid #333333;
	border-bottom: 1px solid #000;
}

#horiz-menu li li a:hover {
	background: none;
}

#horiz-menu li.active,
#horiz-menu li.active_menu {
	background: url(../images/menu-active-r.png) 100% 0 no-repeat;
}

#horiz-menu li.active a,
#horiz-menu li.active_menu a {
	background: url(../images/menu-active-l.png) 0 0 no-repeat;
	color: #fff;
}

#horiz-menu span.topdaddy,
#horiz-menu span.top {
	display: block;
	float: left;
	position: relative;
	text-align: center;
}

#horiz-menu li li span.top {
	display: inline;
	float: none;
	position: static;
	text-align: left;
}

#horiz-menu span.topdaddy span {
	text-align: left;
}

#horiz-menu span.selector {
	display: block;
	position: absolute;
	overflow: hidden;
	bottom: 5px;
	left: 50%;
	margin: 0 auto;
	margin-left: -30px;
	height: 3px;
	width: 59px;
	background: none;

}

#horiz-menu li.active span span.selector,
#horiz-menu li:hover span span.selector,
#horiz-menu li.sfHover span span.selector {
	background: url(../images/menu-accent.png) 0 0 no-repeat;

}

span.selector br {
	display: none;
}
/* ... */

